--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,12 @@
   <body>
     <!--  -->
     <load src="" ></load>
-
+    <main>
+      <section class="filter">
+        <div class="left-side"></div>
+        <div class="right-side"></div>
+      </section>
+    </main>
 
     <script type="module" src="/main.js"></script>
   </body>
