--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,22 @@
     
   </head>
   <body>
-    <!--  -->
-    <load src="" ></load>
+    <header>
+      <load scr="./partials/header.html"></load>
+    </header>
     <main>
+      <load src="./partials/hero.html" ></load>
+      <load src="./partials/list-of-recipes.html" ></load>
+      <load src="./partials/list-of-recipes.html" ></load>
+
       <section class="filter">
         <div class="left-side"></div>
         <div class="right-side"></div>
       </section>
     </main>
+    <load src="./partials/modal-order.html" ></load>
+    <load src="./partials/modal-rating.html" ></load>
+    <load src="./partials/modal-recipe.html" ></load>
 
     <script type="module" src="/main.js"></script>
   </body>
