--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tasty Treats</title>
 
-    <!-- Fonts styles -->
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tasty Treats</title>
+
+  <!-- Fonts styles -->
 
 
-    <!-- Normalize -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+  <!-- Normalize -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Custom styles -->
-    <link rel="stylesheet" href="./css/styles.css" />
-    
-  </head>
-  <body>
-    <!--  -->
-    <load src="" ></load>
-    <main>
-      <section class="filter">
-        <div class="left-side"></div>
-        <div class="right-side"></div>
-      </section>
-    </main>
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="./css/styles.css" />
 
-    <script type="module" src="/main.js"></script>
-  </body>
+</head>
+
+<body>
+  <!--  -->
+  <load src="./popular-recipes.html"></load>
+  <main>
+    <section class="filter">
+      <div class="left-side"></div>
+      <div class="right-side"></div>
+    </section>
+  </main>
+
+  <script type="module" src="/src/popular-recipe.js"></script>
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
