--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     </section>
   </main>
 
-  <script type="module" src="/src/popular-recipe.js"></script>
+  <script type="module" src="./popular-recipe.js"></script>
   <script type="module" src="/main.js"></script>
 </body>
 
