--- a/src/index.html
+++ b/src/index.html
@@ -15,47 +15,47 @@
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<<<<<<< HEAD
-  <!-- Custom styles -->
-  <link rel="stylesheet" href="./css/styles.css" />
-=======
+  <<<<<<< HEAD <!-- Custom styles -->
+    <link rel="stylesheet" href="./css/styles.css" />
+    =======
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
-    
-  </head>
-  <body>
-    <header>
-      <load scr="./partials/header.html"></load>
-    </header>
-    <main>
-      <load src="./partials/hero.html" ></load>
-      <load src="./partials/list-of-recipes.html" ></load>
-      <load src="./partials/list-of-recipes.html" ></load>
-
-      <section class="filter">
-        <div class="left-side"></div>
-        <div class="right-side"></div>
-      </section>
-    </main>
-    <load src="./partials/modal-order.html" ></load>
-    <load src="./partials/modal-rating.html" ></load>
-    <load src="./partials/modal-recipe.html" ></load>
->>>>>>> upstream/main
 
 </head>
 
 <body>
-  <!--  -->
-  <load src="./popular-recipes.html"></load>
+  <header>
+    <load scr="./partials/header.html"></load>
+  </header>
   <main>
+    <load src="./partials/hero.html"></load>
+    <load src="./partials/list-of-recipes.html"></load>
+    <load src="./partials/list-of-recipes.html"></load>
+
     <section class="filter">
       <div class="left-side"></div>
       <div class="right-side"></div>
     </section>
   </main>
+  <load src="./popular-recipes.html"></load>
+  <load src="./partials/modal-order.html"></load>
+  <load src="./partials/modal-rating.html"></load>
+  <load src="./partials/modal-recipe.html"></load>
+  >>>>>>> upstream/main
 
-  <script type="module" src="./popular-recipe.js"></script>
-  <script type="module" src="/main.js"></script>
-</body>
+  </head>
+
+  <body>
+    <!--  -->
+    <main>
+      <section class="filter">
+        <div class="left-side"></div>
+        <div class="right-side"></div>
+      </section>
+    </main>
+
+    <script type="module" src="./list-of-popular.js"></script>
+    <script type="module" src="/main.js"></script>
+  </body>
 
 </html>
