--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,10 @@
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <<<<<<< HEAD <!-- Custom styles -->
-    <link rel="stylesheet" href="./css/styles.css" />
-    =======
-    <!-- Custom styles -->
-    <link rel="stylesheet" href="./css/styles.css" />
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="./css/styles.css" />
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="./css/styles.css" />
 
 </head>
 
@@ -37,11 +36,10 @@
       <div class="right-side"></div>
     </section>
   </main>
-  <load src="./popular-recipes.html"></load>
+  <load src="./partials/list-of-popular.html"></load>
   <load src="./partials/modal-order.html"></load>
   <load src="./partials/modal-rating.html"></load>
   <load src="./partials/modal-recipe.html"></load>
-  >>>>>>> upstream/main
 
   </head>
 
