--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
       </section>
     </main>
 
-    <script type="module" src="./list-of-popular.js"></script>
+    <script type="module" src="./js/list-of-popular.js"></script>
     <script type="module" src="/main.js"></script>
   </body>
 
