add block categor

--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,10 @@
     <main>
       <load src="./partials/hero.html" ></load>
       <load src="./partials/list-of-recipes.html" ></load>
-      <load src="./partials/list-of-recipes.html" ></load>
+      
 
       <section class="filter">
-        <div class="left-side"></div>
+        <div class="left-side"><load src="./partials/block-categories.html" ></load></div>
         <div class="right-side"></div>
       </section>
     </main>
