--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
 
     <!-- Fonts styles -->
 
-
     <!-- Normalize -->
     <link
       rel="stylesheet"
@@ -20,25 +19,27 @@
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
-    
   </head>
   <body>
     <header>
-      <load scr="./partials/header.html"></load>
+      <load scr="./partials/header.html" />
     </header>
     <main>
-      <load src="./partials/hero.html" ></load>
-      <load src="./partials/list-of-recipes.html" ></load>
-      
+      <load src="./partials/hero.html" />
 
       <section class="filter">
-        <div class="left-side"><load src="./partials/block-categories.html" ></load></div>
-        <div class="right-side"></div>
+        <div class="left-side">
+          <load src="./partials/block-categories.html" />
+          <load src="./partials/list-of-popular.html" />
+        </div>
+        <div class="right-side">
+          <load src="./partials/list-of-recipes.html" />
+        </div>
       </section>
     </main>
-    <load src="./partials/modal-order.html" ></load>
-    <load src="./partials/modal-rating.html" ></load>
-    <load src="./partials/modal-recipe.html" ></load>
+    <load src="./partials/modal-order.html" />
+    <load src="./partials/modal-rating.html" />
+    <load src="./partials/modal-recipe.html" />
 
     <script type="module" src="/main.js"></script>
   </body>
