--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,6 @@
 
   <!-- Fonts styles -->
 
-<<<<<<< HEAD
-
   <!-- Normalize -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
@@ -43,49 +41,41 @@
   <load src="./partials/modal-recipe.html"></load>
 
   </head>
-=======
-    <!-- Normalize -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+  <!-- Normalize -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Custom styles -->
-    <link rel="stylesheet" href="./css/styles.css" />
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <header>
       <load scr="./partials/header.html" />
     </header>
     <main>
       <load src="./partials/hero.html" />
->>>>>>> upstream/main
 
-  <body>
-    <!--  -->
-    <main>
-      <section class="filter">
-        <div class="left-side">
-          <load src="./partials/block-categories.html" />
-          <load src="./partials/list-of-popular.html" />
-        </div>
-        <div class="right-side">
-          <load src="./partials/list-of-recipes.html" />
-        </div>
-      </section>
-    </main>
-<<<<<<< HEAD
-=======
-    <load src="./partials/modal-order.html" />
-    <load src="./partials/modal-rating.html" />
-    <load src="./partials/modal-recipe.html" />
->>>>>>> upstream/main
+      <body>
+        <!--  -->
+        <main>
+          <section class="filter">
+            <div class="left-side">
+              <load src="./partials/block-categories.html" />
+              <load src="./partials/list-of-popular.html" />
+            </div>
+            <div class="right-side">
+              <load src="./partials/list-of-recipes.html" />
+            </div>
+          </section>
+        </main>
+        <load src="./partials/modal-order.html" />
+        <load src="./partials/modal-rating.html" />
+        <load src="./partials/modal-recipe.html" />
 
-    <script type="module" src="./js/list-of-popular.js"></script>
-    <script type="module" src="/main.js"></script>
-  </body>
+        <script type="module" src="./js/list-of-popular.js"></script>
+        <script type="module" src="/main.js"></script>
+      </body>
 
 </html>
