--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <main>
       <load src="./partials/hero.html" />
 
-      <section class="filter">
+      <section class="filter container">
         <div class="left-side">
           <load src="./partials/block-categories.html" />
           <load src="./partials/list-of-popular.html" />
