--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,15 @@
     <main>
       <load src="./partials/hero.html" />
 
-      <section class="filter container">
-        <div class="left-side">
-          <load src="./partials/block-categories.html" />
-          <load src="./partials/list-of-popular.html" />
-        </div>
-        <div class="right-side">
-          <load src="./partials/list-of-recipes.html" />
+      <section class="filter">
+        <div class="container">
+          <div class="left-side">
+            <load src="./partials/block-categories.html" />
+            <load src="./partials/list-of-popular.html" />
+          </div>
+          <div class="right-side">
+            <load src="./partials/list-of-recipes.html" />
+          </div>
         </div>
       </section>
     </main>
