commit favourites hero

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -16,6 +16,12 @@
       referrerpolicy="no-referrer"
     />
 
+    <section class="favourites-hero">
+      <container class="favourites-hero-container">
+        <a href="#favoutites">Favourites</a>
+      </container>
+    </section>
+
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
