--- a/src/favorites.html
+++ b/src/favorites.html
@@ -17,13 +17,15 @@
     />
 
     <!-- Custom styles -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/favorite-page.css" />
   </head>
   <body>
-    <!--  -->
-    <load></load>
-
-    <!--  -->
-    <script></script>
+    <header>
+      <load src="./partials/header.html" />
+    </header>
+    <main>
+      <load src="./partials/favorite-page.html" />
+    </main>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
