--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       <load src="./partials/hero.html" />
 
       <section class="filter">
-        <div class="section">
+        <div class="container">
           <div class="left-side">
             <load src="./partials/block-categories.html" />
             <load src="./partials/list-of-popular.html" />
