--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <main>
       <load src="./partials/hero.html" />
 
+
       <section class="filter">
         <div class="container">
           <div class="left-side">
@@ -33,6 +34,7 @@
             <load src="./partials/list-of-popular.html" />
           </div>
           <div class="right-side">
+            <load src="./partials/block-search.html" />
             <load src="./partials/list-of-recipes.html" />
           </div>
         </div>
