hero-favorites code

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,6 @@
     <main>
       <load src="./partials/hero.html" />
 
-
       <section class="filter">
         <div class="container">
           <div class="left-side">
@@ -39,6 +38,8 @@
           </div>
         </div>
       </section>
+
+      <a href="./favorites.html">favourites</a>
     </main>
     <load src="./partials/modal-order.html" />
     <load src="./partials/modal-rating.html" />
