--- a/src/favorites.html
+++ b/src/favorites.html
@@ -17,7 +17,8 @@
     />
 
     <!-- Custom styles -->
-    <link rel="stylesheet" href="./css/favorite-page.css" />
+    <!-- <link rel="stylesheet" href="./css/favorite-page.css" /> -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
