--- a/src/favorites.html
+++ b/src/favorites.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header>
-      <load src="./partials/header.html" />
+      <load src="./partials/favorite-header.html" />
     </header>
     <main>
       <load src="./partials/favorite-page.html" />
