--- a/src/index.html
+++ b/src/index.html
@@ -35,11 +35,11 @@
           <div class="right-side">
             <load src="./partials/block-search.html" />
             <load src="./partials/list-of-recipes.html" />
+            <load src="./partials/padination.html">
           </div>
         </div>
       </section>
 
-      <a href="./favorites.html">favourites</a>
     </main>
     <load src="./partials/modal-order.html" />
     <load src="./partials/modal-rating.html" />
