--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
           <div class="right-side">
             <load src="./partials/block-search.html" />
             <load src="./partials/list-of-recipes.html" />
-            <load src="./partials/padination.html">
+            <load src="./partials/pagination.html">
           </div>
         </div>
       </section>
