--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -35,11 +35,11 @@
           <div class="right-side">
             <load src="./partials/block-search.html" />
             <load src="./partials/list-of-recipes.html" />
+            <load src="./partials/pagination.html">
           </div>
         </div>
       </section>
 
-      <a href="./favorites.html">favourites</a>
     </main>
     <load src="./partials/modal-order.html" />
     <load src="./partials/modal-rating.html" />
