--- a/src/favorites.html
+++ b/src/favorites.html
@@ -14,6 +14,7 @@
       referrerpolicy="no-referrer"
     />
 
+    <!-- Сustom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
