--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       <load src="./partials/hero.html" />
 
       <section class="filter">
-        <div class="container">
+        <div class="container cont-div">
           <div class="left-side">
             <load src="./partials/block-categories.html" />
             <load src="./partials/list-of-popular.html" />
@@ -43,6 +43,6 @@
     <load src="./partials/modal-rating.html" />
     <load src="./partials/modal-recipe.html" />
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
